--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name ="silver">#C0C0C0</color>
+    <color name="rrr">#FF5733</color>
+    <color name="olive">#808000</color>
+    <color name="purple">#800080</color>
+    <color name="gray">#808080</color>
 </resources>
