--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,238 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/cnt"
+                android:textSize="50sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/cnt1"
+                android:textSize="50sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="AC"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/clear"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="√"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/root"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="DEL"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/delete"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="%"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/par"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/silver"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="7"
+
+                android:textSize="20sp"
+                android:id="@+id/seven"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="8"
+
+                android:textSize="20sp"
+                android:id="@+id/eight"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="9"
+
+                android:textSize="20sp"
+                android:id="@+id/nine"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="/"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/div"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/silver"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="4"
+
+                android:textSize="20sp"
+                android:id="@+id/four"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="5"
+
+                android:textSize="20sp"
+                android:id="@+id/five"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="6"
+
+                android:textSize="20sp"
+                android:id="@+id/six"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="*"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/mul"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/silver"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="1"
+
+                android:textSize="20sp"
+                android:id="@+id/one"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="2"
+
+                android:textSize="20sp"
+                android:id="@+id/two"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="3"
+
+                android:textSize="20sp"
+                android:id="@+id/three"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="-"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/minus"/>
+
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/silver"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="0"
+
+                android:textSize="20sp"
+                android:id="@+id/zero"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="."
+
+                android:textSize="20sp"
+                android:id="@+id/dot"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="="
+
+                android:textSize="20sp"
+                android:id="@+id/equal"/>
+            <Button
+                android:layout_width="105dp"
+                android:layout_height="80dp"
+                android:text="+"
+                android:background="@color/gray"
+                android:textSize="20sp"
+                android:id="@+id/plus"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
